# r0-tlsn-foundry

./: Cargo.toml  README.md  riscv32im-linker.sh
contracts/: ITLSNVerifier.sol  TLSNVerifier.sol
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml  rust-toolchain.toml
methods/guest/.cargo/: config.toml
ring-patched/: Cargo.toml
ring-patched/include/ring-core/: base.h
ring-patched/src/: lib.rs
script/: Deploy.s.sol
tests/: TLSNVerifier.t.sol
