[package]
name = "tlsn_verifier_guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tlsn_verifier"
path = "src/bin/tlsn_verifier.rs"

[dependencies]

risc0-zkvm = { version = "=2.0.2", default-features = false, features = ["std", "unstable"] }
risc0-zkvm-platform = { version = "=2.0.2", features = ["rust-runtime", "export-getrandom", "sys-getenv"] }
serde      = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
bincode    = { version = "1.3", default-features = false }
hex        = { version = "0.4", default-features = false }
getrandom  = "0.3.3"
tlsn-core  = { git = "https://github.com/tlsnotary/tlsn", package = "tlsn-core", tag = "v0.1.0-alpha.9", default-features = false }
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "arithmetic", "alloc"] }
alloy-primitives = { version = "1.0", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types   = { version = "1.0" }

[profile.release]
lto = "thin"



